# DataWizz

./: .gitignore  README.md  docker-compose.yml  run.sh
.runtime/: playwright_tmpdir
backend/: .env.example  Dockerfile  README.md  alembic.ini  auth_search_smoke.db  catalog_metadata_smoke.db  chart_traceability_smoke.db  local.db  logs_filter_smoke.db  pipeline_scheduler_smoke.db  pipeline_templates_smoke.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260526_0001_initial.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: bi.py  engines.py  files.py  pipelines.py  queries.py  system.py  tables.py
backend/app/core/: config.py
backend/app/db/: base.py  runtime_schema.py  session.py
backend/app/models/: auth.py  bi.py  catalog.py  common.py  notebook.py  pipeline.py
backend/app/schemas/: bi.py  common.py  engines.py  files.py  notebooks.py  pipelines.py  queries.py  system.py  table_lineage.py  tables.py
backend/app/services/: airflow_dag.py  auth_service.py  bi_service.py  catalog_governance_service.py  catalog_lineage_service.py  catalog_metadata_service.py  delta_service.py  duckdb_service.py  execution_engine_service.py  pipeline_scheduler_service.py  pipeline_service.py  storage.py  superset_catalog_service.py  superset_runtime_service.py
backend/app/utils/: naming.py  tabular.py
docs/: api.md  architecture.md  demo-workflow.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
sample_data/: customers.csv  pipeline_sales_curated.json  sales.csv
(+68 files in other folders)
